--- a/AULA03/style.css
+++ b/AULA03/style.css
@@ -4,7 +4,6 @@
 body {
     text-align: center;
     margin-top: 5%;
-    text-align: center;
 }
 main{
     /*background-color: red;*/
@@ -14,8 +13,8 @@ main{
     position: relative;
 
 }
-.form{
-    
+/*.form{
+    text-align: center;
     width:50%;
     padding:2%;
     font-size: clamp(20px, 10vw, 1rem);
@@ -35,4 +34,21 @@ main{
 .enviar:hover{
     background-color:rgba(15, 15, 15, 0.918);
 
+}*/
+
+.enviar{
+    width: 20%;
+    padding:1%;
+    border: 1px solid #000;
+    border-radius:5px;
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
+    color: white;
+    background-color: #444;
+    box-shadow: 1.5px 2px 0 #222, 3px 4px 0 #000;
+}
+.enviar:active{
+    /*background-color: red;*/
+    box-shadow: inset -4px 4px 0 #222; /* "afunda o botão" */
+    font-size: 0.9ren;
 }
