--- a/AULA03/style.css
+++ b/AULA03/style.css
@@ -1,42 +1,22 @@
 *{
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 body {
     text-align: center;
     margin-top: 5%;
-}
-main{
-    /*background-color: red;*/
-    display: inline-block;
-    margin-top: 2%;
-    padding: 15px;
-    position: relative;
+    background-color: rgba(245, 241, 130, 0.726);
 
 }
-/*.form{
-    text-align: center;
-    width:50%;
-    padding:2%;
-    font-size: clamp(20px, 10vw, 1rem);
-    font-weight: 600;
-}
-.enviar{
-    font-weight: 600;
+input{
     width:30%;
     padding:1%;
-    color: white;
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius:5px;
-    background-color: #444;
-    box-shadow: 2px 3px 0 #222, 4px 6px 0 #000;
-
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
 }
-.enviar:hover{
-    background-color:rgba(15, 15, 15, 0.918);
-
-}*/
-
-.enviar{
+button{
     width: 20%;
     padding:1%;
     border: 1px solid #000;
@@ -47,7 +27,7 @@ main{
     background-color: #444;
     box-shadow: 1.5px 2px 0 #222, 3px 4px 0 #000;
 }
-.enviar:active{
+button:active{
     /*background-color: red;*/
     box-shadow: inset -4px 4px 0 #222; /* "afunda o botão" */
     font-size: 0.9ren;
