--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color: rgb(213, 168, 218);
+    background-color: rgb(92, 172, 192);
     margin-top: 10%;
 
 }
@@ -14,19 +14,19 @@ div.cabecalho {
 }
 p{
     font-family: Arial, Helvetica, sans-serif;
-    color: rgba(102, 10, 102, 0.74);
+    color: rgba(13, 72, 128, 0.74);
     font-size: 30px;
 }
 
 a {
     font-family: arial;
-    color: rgba(88, 41, 88, 0.938);
+    color: black;
     font-size: 20px;
     padding: 0.3%;
 }
 
 li{
-    color: rgb(213, 168, 218);
+    color: rgb(92, 172, 192);
     padding: 1%;
     text-align:justify;
 }
